# TraderBot

./: .gitignore  TraderBot.sln
Alert/: Alert.pyproj  main.py  message.py
BollingerBandsBot/: BollingerBandsBot.pyproj  bb.py  db.db  db.db-shm  db.db.sql  db.py  info.wnd  macd.py  main.py  message.py  offers.py  price.py  volume.py
BollingerBandsBot/db bak/: db.db
OpenInterest/: OpenInterest.pyproj  main.py
Predict/: Predict.pyproj
Scalper/: Scalper.pyproj  main.py  offers.py
SupRes/: SupRes.pyproj  main.py  module1.py  price.py
TraderBot/: TraderBot.pyproj  bb.py  message.py  module1.py  price.py
TraderBot/Examples/: 01 - Connect.py  02 - Accounts.py  03 - Ticker.py  04 - Stream.py
etc/: 2readme (3).txt  TW022.lua  buysell.lua  getSecurityClass.lua  info.wnd  tw022_ini.lua  Новый текстовый документ.txt
etc/qlua-master/: .gitignore  .gitlab-ci.yml  .gitmodules  MANIFEST.in  README.md  SConstruct  pylintrc  requirements-build.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
