[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[aliases]
test=pytest

[tool:pytest]
required_plugins =
    pytest-mypy
    pytest-pylint
python_functions = test_*
python_files =
    tests/test_*.py
    *_test.py
norecursedirs =
    .*
    *.egg-info
    venv
    dist
    deb_dist
    build
    protoc
    src
addopts =
    --doctest-modules
    --mypy
    --pylint
    --pylint-rcfile=pylintrc
    --pylint-ignore=tests,setup.py,rpc
    --pylint-ignore-patterns=test_*
    -vv
log_cli = 1
#log_cli_level = DEBUG

[mypy]
disallow_untyped_defs = True
show_error_context = True
warn_return_any = True

[mypy-setup]
ignore_errors = True

[mypy-tests.*]
ignore_errors = True

[mypy-zmq.*]
ignore_missing_imports = True
